kubernetes/ingress/whoami-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  ports:
    - port: 80
      protocol: TCP
      name: web
  selector:
    app: whoami
