kubernetes/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-service
                port:
                  number: 80
          - path: /echo2
            pathType: Prefix
            backend:
              service:
                name: echo2
                port:
                  number: 80
          - path: /whoami
            pathType: Prefix
            backend:
              service:
                name: whoami
                port:
                  number: 80
    - host: echo1.example.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: echo1
                port:
                  number: 80
    - host: echo2.example.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: echo2
                port:
                  number: 80
